# tirjapy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md
scripts/: 00_script_config.sh  01_setup_python.sh  02_run_python.sh  51_build_wheel.sh  53_copy_to_12.sh  53_copy_to_server.sh
src/tirjapy/base/: HandleConstants.py  StoreBase.py  WebServiceBase.py
src/tirjapy/proto/: TirjaPy.proto
src/tirjapy/utils/: CalyrexHandle.py  FileStore.py  FileStoreBase.py  HandleQuotes.py  HtPasswdAuth.py  HttpPostHandle.py  JcsvData.py  MysqlHandleBase.py  Porygon.py  RazorpayHandle.py  RedisHandle.py  StorageHandle.py  TypedEnum.py
