[project]
name = "tirjapy"
version = "1.0.0"
description = "python common tools"
authors = [ {name = "Shreos Roychowdhury", email = "shreos@tirja.com"}, ]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Intended Audience :: Developers",
	"License :: Other/Proprietary License",
	"Natural Language :: English",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
package-type = "library"

[project.scripts]
