[project]
name = "tirjapy"
version = "1.1.2"
description = "python common tools"
authors = [ {name = "Shreos Roychowdhury", email = "shreos@tirja.com"}, ]
dependencies = [
	"passlib>=1.7.4",
	"requests>=2.32.3",
	"mysql-connector-python>=9.1.0",
	"bitsets>=0.8.4",
	"pycryptodome>=3.21.0",
	"boto3>=1.35.92",
	"loguru>=0.7.3"
]
requires-python = ">=3.10"
readme = "README.md"
license-files = ["LICENSE.txt"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Intended Audience :: Developers",
	"Natural Language :: English",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
package-type = "library"

[project.scripts]
